--- a/index.html
+++ b/index.html
@@ -1,21 +1,366 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Crowdfunding product page</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  About
+    <title>Frontend Mentor | Crowdfunding product page</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="font-Commissioner relative">
+    <header id="bg-image">
+      <nav id="main-nav" class="flex justify-between px-6 pt-8 mb-9">
+        <div>
+          <img src="images/logo.svg" alt="Company's Logo" />
+        </div>
+        <div id="hamburger" class="cursor-pointer">
+          <img
+            id="menu"
+            src="images/icon-hamburger.svg"
+            alt="Hamburger Menu Icon"
+          />
+          <img
+            id="xmark"
+            src="images/icon-close-menu.svg"
+            alt="Close Menu Icon"
+            class="hidden"
+          />
+        </div>
+      </nav>
+      <nav id="mobile-menu" class="relative hidden z-10 top-0">
+        <ul class="bg-white w-80 h-auto rounded-lg absolute left-8">
+          <li class="py-7 border-b-2 w-full pl-6">About</li>
+          <li class="py-7 border-b-2 w-full pl-6">Discover</li>
+          <li class="py-7 pl-6">Get Started</li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Main Section -->
+    <main class="text-center px-6 relative">
+      <div
+        id="main-container"
+        class="bg-white shadow-sm text-center absolute -top-14 rounded-xl"
+      >
+        <div class="mb-7 -mt-6 flex justify-center">
+          <img src="images/logo-mastercraft.svg" alt="Mastercraft Logo" />
+        </div>
+        <div>
+          <h2 class="font-bold px-14 text-xl mb-7">
+            Mastercraft Bamboo Monitor Riser
+          </h2>
+        </div>
+        <div>
+          <p class="text-darkCyan text-sm px-5 leading-7 mb-7">
+            A beautiful & handcrafted monitor stand to reduce neck and eye
+            strain.
+          </p>
+        </div>
+        <div class="flex justify-center items-center mb-24">
+          <button
+            class="mr-2 px-7 py-4 bg-moderateCyan text-white rounded-full"
+          >
+            Back this project
+          </button>
+          <div>
+            <img src="images/icon-bookmark.svg" alt="Bookmark" />
+          </div>
+        </div>
+        <!-- Contains the company's current goals -->
+        <div>
+          <!-- Container for total money donated-->
+          <div class="flex flex-col justify-center items-center mb-9">
+            <div id="current-price" class="font-bold text-3xl mb-4">$0</div>
+            <p class="text-moderateCyan font-thin mb-6">of $100,000 backed</p>
+            <div class="w-20 h-0.5 bg-moderateCyan"></div>
+          </div>
+          <!-- Container for total backers-->
+          <div class="flex flex-col justify-center items-center mb-9">
+            <div id="current-backers" class="font-bold text-3xl mb-4">
+              5,007
+            </div>
+            <p class="text-moderateCyan font-thin mb-6">total backed</p>
+            <div class="w-20 h-0.5 bg-moderateCyan"></div>
+          </div>
+          <!-- Container for days left-->
+          <div class="flex flex-col justify-center items-center mb-8">
+            <div id="current-day" class="font-bold text-3xl mb-4">56</div>
+            <p class="text-moderateCyan font-thin">days left</p>
+          </div>
+        </div>
+        <!-- End Company's Goal Container -->
+
+        <!-- Company's Progress Bar -->
+        <!-- Outer Layer -->
+        <div class="w-full h-4 rounded-full mb-28 px-10">
+          <!-- Inner Progress -->
+          <div class="w-1/2 h-full bg-moderateCyan rounded-full"></div>
+        </div>
+        <!-- About the Project -->
+        <section class="text-start px-5">
+          <div class="mb-7">
+            <h1 class="font-bold text-xl">About this Project</h1>
+          </div>
+          <div class="mb-10">
+            <p class="text-moderateCyan leading-8 text-sm">
+              The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
+              platform that elevates your screen to a more comfortable viewing
+              height. Placing your monitor at eye level has the potential to
+              improve your posture and make you more comfortable while at work,
+              helping you stay focused on the task at hand.
+            </p>
+          </div>
+          <div class="mb-10">
+            <p class="text-moderateCyan leading-8 text-sm">
+              Featuring artisan craftsmanship, the simplicity of design creates
+              extra desk space below your computer to allow notepads, pens, and
+              USB sticks to be stored under the stand.
+            </p>
+          </div>
+        </section>
+
+        <!-- Project - Donations -->
+        <section class="text-start">
+          <!-- First Container - Bamboo Stand -->
+          <div class="border py-6 pl-6 rounded-xl mb-6">
+            <!-- Inner Content -->
+            <div class="mb-8">
+              <h1 class="font-bold mb-3">Bamboo Stand</h1>
+              <h2 class="text-moderateCyan">Pledge $25 or more</h2>
+            </div>
+            <div class="pr-10 mb-10">
+              <p class="leading-8 font-thin">
+                You get an ergonomic stand made of natural bamboo. You've helped
+                us launch our promotional campaign, and you’ll be added to a
+                special Backer member list.
+              </p>
+            </div>
+            <div class="flex items-center mb-8">
+              <h1 class="font-bold text-3xl mr-3">101</h1>
+              <p class="text-moderateCyan">left</p>
+            </div>
+            <button
+              class="mr-2 px-7 py-4 bg-moderateCyan text-white rounded-full"
+            >
+              Select Reward
+            </button>
+          </div>
+          <!-- Second Container - Black Edition Stand -->
+          <div class="border py-6 pl-6 rounded-xl mb-6">
+            <!-- Inner Content -->
+            <div class="mb-8">
+              <h1 class="font-bold mb-3">Black Edition Stand</h1>
+              <h2 class="text-moderateCyan">Pledge $75 or more</h2>
+            </div>
+            <div class="pr-10 mb-10">
+              <p class="leading-8 font-thin">
+                You get a Black Special Edition computer stand and a personal
+                thank you. You’ll be added to our Backer member list. Shipping
+                is included.
+              </p>
+            </div>
+            <div class="flex items-center mb-8">
+              <h1 class="font-bold text-3xl mr-3">64</h1>
+              <p class="text-moderateCyan">left</p>
+            </div>
+            <button
+              class="mr-2 px-7 py-4 bg-moderateCyan text-white rounded-full"
+            >
+              Select Reward
+            </button>
+          </div>
+          <!-- Third Container - Mahogany Special Edition (Fade this section out - linear gradient from top to bottom) -->
+          <div id="third-container" class="border py-6 pl-6 mb-28 rounded-xl">
+            <!-- Inner Content -->
+            <div class="mb-8">
+              <h1 class="font-bold mb-3">Mahogany Special Edition</h1>
+              <h2 class="text-moderateCyan">Pledge $200 or more</h2>
+            </div>
+            <div class="pr-10 mb-10">
+              <p class="leading-8 font-thin">
+                You get two Special Edition Mahogany stands, a Backer T-Shirt,
+                and a personal thank you. You’ll be added to our Backer member
+                list. Shipping is included.
+              </p>
+            </div>
+            <div class="flex items-center mb-8">
+              <h1 class="font-bold text-3xl mr-3">0</h1>
+              <p class="text-moderateCyan">left</p>
+            </div>
+            <button
+              class="mr-2 px-7 py-4 bg-moderateCyan text-white rounded-full" disabled
+            >
+              Out Of Stock
+            </button>
+          </div>
+        </section>
+      </div>
+      <!-- Main Container 2 || Modal Menus -->
+      <section id="project-donation-menu" class="bg-white rounded-lg shadow-lg absolute -top-44 text-start close">
+        <div class="flex justify-between px-6 pt-9 mb-9">
+          <h1>Back this Project</h1>
+          <img id="close-modal" src="images/icon-close-modal.svg" alt="Exit Modal" class="object-contain rotate-90 cursor-pointer">
+        </div>
+        <div class="text-start px-6 mb-7">
+          <p class="text-moderateCyan text-sm">  Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
+        </div>
+        <!-- Outer Container -->
+        <div class="w-full px-6 mb-6">
+          <!-- Inner Content -->
+        <div id="first-con" class="w-72 border  pt-8 rounded-lg">
+          <div class="flex mb-6 px-6">
+            <label class="mr-4">
+              <input type="radio" value="no-reward" name="chocie">
+            </label>
+            <h1 class="font-bold">Pledge with no reward</h1>
+          </div>
+          <div class="mb-8 px-6">
+            <p class=" font-thin text-sm leading-7">
+              Choose to support us without a reward if you simply believe in our project. As a backer, 
+              you will be signed up to receive product updates via email.
+            </p>
+          </div>
+          <div id="no-pledge" class="hidden">
+          <div class="w-full h-0.5 bg-moderateCyan opacity-30 "></div>
+          <!-- Pledge Amount Input -->
+            <div class="text-center mb-5 mt-8">
+              <h1>Enter your  Email</h1>
+            </div>
+            <div class="flex justify-center mb-5">
+              <input type="text" placeholder="example@gmail.com" class="w-24 py-2 border pl-4 rounded-full mr-4 outline-none">
+              <button type="submit" class="mr-2 px-7 bg-moderateCyan text-white rounded-full">Submit</button>
+            </div>
+          </div>
+        </div>
+      </div>
+        <!-- Outer Container -->
+        <div class="w-full px-6 mb-6">
+          <!-- Inner Content -->
+        <div id="second-con" class="w-72 border pt-8 rounded-lg">
+          <div class="flex items-center pl-5 mb-6">
+            <label class="mr-4">
+              <input type="radio" value="bamboo-stand" name="chocie">
+            </label>
+            <div class="flex flex-col">
+              <h1 class="font-bold">Bamboo Stand</h1>
+              <p class="text-moderateCyan text-md">Pledge $25 or more</p>
+            </div>
+          </div>
+          <div class="mb-9 pl-5">
+            <p class=" font-thin text-sm pr-2 leading-7">
+              You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
+              you’ll be added to a special Backer member list.
+            </p>
+          </div>
+          <div class="flex items-center mb-7 pl-5">
+            <h1 class="font-bold text-3xl mr-3">101</h1>
+            <p class="text-moderateCyan font-thin">left</p>
+          </div>
+          <div id="bamboo-pledge" class="hidden">
+          <div class="w-full h-0.5 bg-moderateCyan opacity-30 "></div>
+          <!-- Pledge Amount Input -->
+          <div class="text-center mb-5 mt-8">
+            <h1>Enter your Pledge</h1>
+          </div>
+          <div class="flex justify-center mb-5">
+            <input type="text" placeholder="$" class="w-24 py-2 border pl-4 rounded-full mr-4 outline-none">
+            <button type="submit" class="mr-2 px-7 bg-moderateCyan text-white rounded-full">Continue</button>
+          </div>
+        </div>
+        </div>
+      </div>
+        <!-- Outer Container -->
+        <div class="w-full px-6 mb-6">
+          <!-- Inner Content -->
+        <div id="third-con" class="w-72 border pt-8 rounded-lg ">
+          <div class="flex items-center pl-5 mb-6">
+            <label class="mr-4">
+              <input type="radio" value="black-edition" name="chocie">
+            </label>
+            <div class="flex flex-col">
+              <h1 class="font-bold">Black Edition Stand</h1>
+              <p class="text-moderateCyan text-md">Pledge $75 or more</p>
+            </div>
+          </div>
+          <div class="mb-9 pl-5">
+            <p class=" font-thin text-sm pr-7 leading-7">
+              You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+              member list. Shipping is included.
+            </p>
+          </div>
+          <div class="flex items-center mb-7 pl-5">
+            <h1 class="font-bold text-3xl mr-3">64</h1>
+            <p class="text-moderateCyan font-thin">left</p>
+          </div>
+          <div id="black-edition" class="hidden">
+          <div class="w-full h-0.5 bg-moderateCyan opacity-30 "></div>
+          <!-- Pledge Amount Input -->
+            <div class="text-center mb-5 mt-8">
+              <h1>Enter your Pledge</h1>
+            </div>
+            <div class="flex justify-center mb-5">
+              <input type="text" placeholder="$" class="w-24 py-2 border pl-4 rounded-full mr-4 outline-none">
+              <button type="submit" class="mr-2 px-7 bg-moderateCyan text-white rounded-full">Continue</button>
+            </div>
+          </div>
+        </div>
+      </div>
+        <!-- Outer Container -->
+        <div class="w-full px-6 mb-6">
+          <!-- Inner Content -->
+        <div id="con-one" class="border pt-8 rounded-lg opacity-20">
+          <div class="flex items-center pl-5 mb-6">
+            <label class="mr-10">
+              <!-- <input type="radio"> -->
+            </label>
+            <div class="flex flex-col">
+              <h1 class="font-bold">Mahoany Special Edition</h1>
+              <p class="text-moderateCyan text-md">Pledge $200 or more</p>
+            </div>
+          </div>
+          <div class="mb-9 pl-5">
+            <p class=" font-thin text-sm pr-7 leading-7">
+              You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
+              to our Backer member list. Shipping is included.
+            </p>
+          </div>
+          <div class="flex items-center mb-7 pl-5">
+            <h1 class="font-bold text-3xl mr-3">0</h1>
+            <p class="text-moderateCyan font-thin">left</p>
+          </div>
+        </div>
+      </div>
+      
+      </section>
+    </main>
+
+    <script src="app.js"></script>
+
+    <!-- About
   Discover
   Get Started
 
@@ -61,7 +406,7 @@
 
   <!-- Selection modal start -->
 
-  Back this project
+    <!-- Back this project
   Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
 
   Pledge with no reward
@@ -75,44 +420,44 @@
   101 left
 
   <!-- Selected pledge start -->
-  Enter your pledge
+    <!-- Enter your pledge
   $25
-  Continue
-  <!-- Selected pledge end -->
+  Continue -->
+    <!-- Selected pledge end -->
 
-  Black Edition Stand
+    <!-- Black Edition Stand
   Pledge $75 or more
   You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
   member list. Shipping is included.
-  64 left
+  64 left -->
 
-  <!-- Selected pledge start -->
-  Enter your pledge
+    <!-- Selected pledge start -->
+    <!-- Enter your pledge
   $75
-  Continue
-  <!-- Selected pledge end -->
+  Continue -->
+    <!-- Selected pledge end -->
 
-  Mahogany Special Edition
+    <!-- Mahogany Special Edition
   Pledge $200 or more
   You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
   to our Backer member list. Shipping is included.
-  0 left
+  0 left -->
 
-  <!-- Selected pledge  start -->
-  Enter your pledge
+    <!-- Selected pledge  start -->
+    <!-- Enter your pledge
   $200
-  Continue
-  <!-- Selected pledge end -->
+  Continue -->
+    <!-- Selected pledge end -->
 
-  <!-- Selection modal end -->
+    <!-- Selection modal end -->
 
-  <!-- Success modal start -->
+    <!-- Success modal start -->
 
-  Thanks for your support!
+    <!-- Thanks for your support!
   Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
   an email once our campaign is completed.
   Got it!
 
-  <!-- Success modal end -->
-</body>
+  Success modal end -->
+  </body>
 </html>
